<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/lUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23.3dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_item"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/user" />

        <TextView
            android:id="@+id/tvRutPortico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/body.normal"
            tools:text="15.355.553-2" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lUser">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/body.bold"
                    android:text="Numero PC"/>

                <EditText
                    android:id="@+id/edtNumPc"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnIp"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="GO"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/body.bold"
                    android:text="@string/text_wifi" />

                <TextView
                    android:id="@+id/tvWifiName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/body.normal"
                    tools:text="Wifi _ RED-STARKE"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:background="@drawable/rounded_item"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvTitlePortico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                style="@style/body.bold"
                android:text="@string/available_portico" />

            <GridLayout
                android:id="@+id/glPorticos"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:columnCount="2"
                android:rowCount="3"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cdPortico1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/txtPortico1"
                        android:layout_width="98dp"
                        android:layout_height="68.7dp"
                        android:gravity="center"
                        style="@style/body.normal"
                        android:text="Pórtico 1" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cdPortico2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/txtPortico2"
                        android:layout_width="98dp"
                        android:layout_height="68.7dp"
                        android:gravity="center"
                        style="@style/body.normal"
                        android:text="Pórtico 1" />

                </androidx.cardview.widget.CardView>

            </GridLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGoToMain"
                style="@style/button"
                android:layout_width="146dp"
                android:layout_height="41dp"
                android:text="@string/btnNext"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>